# docs/swagger.yaml
@@ -601,12 +601,34 @@ paths:
       summary: 租户更新
       tags:
       - 租户管理
-  /dashboard/panelGroupData:
+  /dashboard/flow_stat:
+    get:
+      consumes:
+      - application/json
+      description: 服务统计
+      operationId: /dashboard/flow_stat
+      parameters:
+      - description: 服务ID
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/middleware.Response'
+      summary: 服务统计
+      tags:
+      - 首页大盘
+  /dashboard/panel_group_data:
     get:
       consumes:
       - application/json
       description: 指标统计
-      operationId: /dashboard/panelGroupData
+      operationId: /dashboard/panel_group_data
       produces:
       - application/json
       responses:
@@ -615,6 +637,22 @@ paths:
           schema:
             $ref: '#/definitions/middleware.Response'
       summary: 指标统计
+      tags:
+      - 首页大盘
+  /dashboard/service_stat:
+    get:
+      consumes:
+      - application/json
+      description: 服务统计
+      operationId: /dashboard/service_stat
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/middleware.Response'
+      summary: 服务统计
       tags:
       - 首页大盘
   /service/service_add_grpc:
